update code ball ,paddle , timer